[package]
name = "bmfw"
description = "CLI tool to unpack Blackmagic device firmware (ATEM, Web Presenter, etc.)"
authors = [
    "Michael Farrell <micolous+git@gmail.com>",
]
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/micolous/blackmagic-firmware-re"
readme = "README.md"

[dependencies]
binrw.workspace = true
libbmfw.workspace = true
thiserror = "2.0.3"
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.clap]
version = "4.5.21"
features = ["derive"]
