[package]
name = "libbmfw"
description = "Unpack Blackmagic device firmware (ATEM, Web Presenter, etc.)"
authors = [
    "Michael Farrell <micolous+git@gmail.com>",
]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/micolous/blackmagic-firmware-re"

[dependencies]
binrw.workspace = true
flate2 = "1.0"
hex = "0.4.3"
sha2 = "0.10.8"
thiserror = "2.0.3"
